[REFACTOR] Change ratingReviewId to UUID for db auto generate