@@ -3,6 +3,7 @@ package id.ac.ui.cs.advprog.koleksikota.ratingreview.repository;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 
 import id.ac.ui.cs.advprog.koleksikota.ratingreview.model.Box;
 import org.junit.jupiter.api.BeforeEach;
@@ -24,7 +25,7 @@ class RatingReviewRepositoryTest {
     private List<RatingReview> ratingReviewList;
 
     @BeforeEach
-    void setup(){
+    void setup() {
         ratingReviewList = new ArrayList<>();
 
         List<Box> boxes = new ArrayList<>();
@@ -34,16 +35,16 @@ class RatingReviewRepositoryTest {
         box1.setBoxDescription("Oleh-oleh dari abang none");
         boxes.add(box1);
 
-        Box box = boxes.getFirst();
+        Box box = boxes.get(0);
 
         RatingReview ratingReview1 = new RatingReview(box, "07f9b8b0-7257-4434-a5b9-79c9703f0760",
                 "Mantap Mang", 5);
-        ratingReview1.setRatingReviewId("4ec1f12c-8e2b-4f02-85c0-531e762b483b");
+        ratingReview1.setRatingReviewId(UUID.fromString("4ec1f12c-8e2b-4f02-85c0-531e762b483b"));
         ratingReviewList.add(ratingReview1);
 
         RatingReview ratingReview2 = new RatingReview(box, "07f9b8b0-7257-4434-a5b9-79c9703f0760",
                 "Kgk enak kiriman lu cok", 1);
-        ratingReview2.setRatingReviewId("8d3e2b3b-b0d9-4e80-a641-2e02c1a935fb");
+        ratingReview2.setRatingReviewId(UUID.fromString("8d3e2b3b-b0d9-4e80-a641-2e02c1a935fb"));
         ratingReviewList.add(ratingReview2);
     }
 
@@ -51,11 +52,11 @@ class RatingReviewRepositoryTest {
     void testSaveCreateReview(){
         RatingReview ratingReview = ratingReviewList.get(0);
         Mockito.when(ratingReviewRepository.save(ratingReview)).thenReturn(ratingReview);
-        Mockito.when(ratingReviewRepository.findById(ratingReview.getRatingReviewId())).thenReturn(Optional.of(ratingReview));
+        Mockito.when(ratingReviewRepository.findById(String.valueOf(ratingReview.getRatingReviewId()))).thenReturn(Optional.of(ratingReview));
 
         RatingReview result = (RatingReview) ratingReviewRepository.save(ratingReview);
 
-        Optional<RatingReview> findResult = ratingReviewRepository.findById(ratingReview.getRatingReviewId());
+        Optional<RatingReview> findResult = ratingReviewRepository.findById(String.valueOf(ratingReview.getRatingReviewId()));
         assertEquals(ratingReview.getRatingReviewId(), result.getRatingReviewId());
         assertEquals(ratingReview.getRatingReviewId(), findResult.get().getRatingReviewId());
         assertEquals(ratingReview.getReviewer(), findResult.get().getReviewer());
@@ -63,39 +64,45 @@ class RatingReviewRepositoryTest {
         assertEquals(ratingReview.getReview(), findResult.get().getReview());
         assertEquals(ratingReview.getRating(), findResult.get().getRating());    }
 
-//    @Test
-//    void testFindByIdIfIdFound() {
-//        for (RatingReview review : ratingReviewList) {
-//            ratingReviewRepository.save(review);
-//        }
-//
-//        RatingReview found = ratingReviewRepository.findById(ratingReviewList.getFirst().getRatingReviewId());
-//        assertEquals(ratingReviewList.getFirst().getBox(), found.getBox());
-//        assertEquals(ratingReviewList.getFirst().getRatingReviewId(), found.getRatingReviewId());
-//        assertEquals(ratingReviewList.getFirst().getReviewer(), found.getReviewer());
-//        assertEquals(ratingReviewList.getFirst().getReview(), found.getReview());
-//        assertEquals(ratingReviewList.getFirst().getRating(), found.getRating());
-//    }
-//
-//    @Test
-//    void testFindReviewByIdNotFound() {
-//        for (RatingReview review : ratingReviewList) {
-//            ratingReviewRepository.save(review);
-//        }
-//
-//        RatingReview foundResult = ratingReviewRepository.findById("apaajadahsabeb");
-//        assertNull(foundResult);
-//    }
-//
-//    @Test
-//    void testDeleteReview() {
-//        for (RatingReview review : ratingReviewList) {
-//            ratingReviewRepository.save(review);
-//        }
-//
-//        assertTrue(ratingReviewRepository.delete(ratingReviewList.getFirst().getRatingReviewId()));
-//
-//        RatingReview foundResult = ratingReviewRepository.findById(ratingReviewList.getFirst().getRatingReviewId());
-//        assertNull(foundResult);
-//    }
+    @Test
+    void testFindByIdIfIdFound() {
+        Mockito.when(ratingReviewRepository.saveAll(ratingReviewList)).thenReturn(ratingReviewList);
+        Mockito.when(ratingReviewRepository.findById(String.valueOf(ratingReviewList.get(0).getRatingReviewId())))
+                .thenReturn(Optional.of(ratingReviewList.get(0)));
+
+        ratingReviewRepository.saveAll(ratingReviewList);
+
+        Optional<RatingReview> found = ratingReviewRepository.findById(String.valueOf(ratingReviewList.get(0).getRatingReviewId()));
+        assertEquals(ratingReviewList.get(0).getRatingReviewId(), found.get().getRatingReviewId());
+        assertEquals(ratingReviewList.get(0).getReviewer(), found.get().getReviewer());
+        assertEquals(ratingReviewList.get(0).getBox(), found.get().getBox());
+        assertEquals(ratingReviewList.get(0).getReview(), found.get().getReview());
+        assertEquals(ratingReviewList.get(0).getRating(), found.get().getRating());
+    }
+
+    @Test
+    void testFindByIdIfIdNotFound() {
+        Mockito.when(ratingReviewRepository.saveAll(ratingReviewList)).thenReturn(ratingReviewList);
+        Mockito.when(ratingReviewRepository.findById("ong pls help")).thenReturn(Optional.empty());
+
+        ratingReviewRepository.saveAll(ratingReviewList);
+
+        Optional<RatingReview> found = ratingReviewRepository.findById("ong pls help");
+        assertFalse(found.isPresent());
+    }
+
+    @Test
+    void testDelete() {
+        Mockito.when(ratingReviewRepository.saveAll(ratingReviewList)).thenReturn(ratingReviewList);
+        Mockito.doNothing().when(ratingReviewRepository).deleteById(String.valueOf(ratingReviewList.get(0).getRatingReviewId()));
+        Mockito.when(ratingReviewRepository.findById(String.valueOf(ratingReviewList.get(0).getRatingReviewId()))).
+                thenReturn(Optional.empty());
+
+        ratingReviewRepository.saveAll(ratingReviewList);
+
+        ratingReviewRepository.deleteById(String.valueOf(ratingReviewList.get(0).getRatingReviewId()));
+
+        Optional<RatingReview> findResult = ratingReviewRepository.findById(String.valueOf(ratingReviewList.get(0).getRatingReviewId()));
+        assertFalse(findResult.isPresent());
+    }
 }
